--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".vim"]
 	path = .vim
 	url = https://github.com/dbarsam/.vim.git
+[submodule ".cmd"]
+	path = .cmd
+	url = https://github.com/dbarsam/.cmd.git
